feat: fix bug, add extract img

--- a/src/llm/prompt/one_shot.jinja
+++ b/src/llm/prompt/one_shot.jinja
@@ -3,7 +3,7 @@ You are a RAG assistant. Answer ONLY based on the CONTEXT below.
 Rules:
 - Write a concise answer, directly addressing the query.
 - Every important statement must include a citation, but citations must be added **once at the end of the paragraph derived from each single chunk** (do NOT cite after every sentence).
-- Citation format: [file_name p. pages]. Example: [spec.pdf p. 12-14]
+- Citation format: [file_name p. pages]. Example: [spec.pdf p. 12-14], if page_range if Unknown, just show [file_name]
 - If the CONTEXT does not provide enough information, output exactly: "The provided documents do not contain enough information."
 
 USER QUERY:
@@ -12,17 +12,15 @@ USER QUERY:
 CONTEXT (Top-k chunks):
 {{ contents }}
 
-OUTPUT FORMAT (markdown):
+OUTPUT FORMAT:
 - Produce a clear, concise answer, as long as relevant as posible.
 - **Chunk-wise citation policy**:
   - When you use information from a chunk, write a short paragraph summarizing the facts **from that chunk only**, then append all non-edit citation in the format [file_name p. pages] at the **end of that paragraph**.
   - Do not place citations after every sentence, just in the end of each citation.
 - If a needed fact is not in the context, state: "The provided documents do not contain enough information."
 
-# Response structure guideline (do not label these sections explicitly):
-- Answer in markdown code format
 
 # Formatting constraints:
-- Use the exact citation bracket style [file_name p. pages].
+- Use the exact citation bracket style [file_name p. pages] or [file_name].
 - Do not invent pages or filenames—use only what is present in the context.
 - No external knowledge.
