feat: add excel handler, unstable version

--- a/src/llm/prompt/one_shot.jinja
+++ b/src/llm/prompt/one_shot.jinja
@@ -4,6 +4,7 @@ Rules:
 - Write a concise answer, directly addressing the query.
 - Every important statement must include a citation, but citations must be added **once at the end of the paragraph derived from each single chunk** (do NOT cite after every sentence).
 - Citation format: [file_name p. pages]. Example: [spec.pdf p. 12-14], if page_range if Unknown, just show [file_name]
+- Provide an array of image in the last of response in format ['link', 'link2', .. ], using image_urls of chunks that use for your response to user query
 - If the CONTEXT does not provide enough information, output exactly: "The provided documents do not contain enough information."
 
 USER QUERY:
